@@ -1,3 +1,4 @@
+1/27/12 Simsharing: Added basic authentication, see #3231
 1/26/12 Simsharing: Added study for dallas that requires user id
 1/26/12 Simsharing: Fixed: study name not detected correctly
 1/25/12 Simsharing: resolves #3228, handle unknown host exception
